# stonksfeed.com

./: .flake8  .gitignore  Makefile  build.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml  upload.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: apply-prod.yml  build.yml  deploy-infrastructure.yml  deploy.yml
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: index.css
frontend/src/components/: FilterWidget.tsx  Header.tsx  NewsCard.tsx  SearchBar.tsx  SortDropdown.tsx  StatsBar.tsx
frontend/src/data/: mockNews.ts
frontend/src/hooks/: useArticles.ts
frontend/src/lib/: api.ts
frontend/src/pages/: Index.tsx
infrastructure/: README.md  app.py  cdk.json  pyproject.toml
infrastructure/cdk.out/: Stonksfeed-Backend-Production.assets.json  Stonksfeed-Backend-Production.template.json  Stonksfeed-CiCd.assets.json  Stonksfeed-CiCd.template.json  Stonksfeed-Data-Production.assets.json  Stonksfeed-Data-Production.template.json  Stonksfeed-Production.assets.json  Stonksfeed-Production.template.json  manifest.json  tree.json
infrastructure/lambdas/fetch_rss/: handler.py  requirements.txt
infrastructure/lambdas/get_articles/: handler.py
infrastructure/stacks/: __init__.py  api.py  backend.py  cicd.py  data.py  static_site.py
scripts/: build-lambda.sh
stonksfeed/: config.py
stonksfeed/rss/: base.py  marketwatch.py  wsj.py
templates/: gappers.html  index.html  layout.html  measures.html
terraform/aws/acm-public/: main.tf  variables.tf
terraform/aws/cloudfront/: main.tf  outputs.tf  variables.tf
terraform/aws/route53-delegation-set/: main.tf  variables.tf
terraform/aws/route53-zone/: main.tf  outputs.tf  variables.tf
terraform/env/: terragrunt.hcl
terraform/env/common/: common_variables.tf  provider.tf
tests/json/: create-stonk-articles-table.json
tests/unit/: conftest.py  test_base_reader.py  test_dynamodb.py  test_handler.py  test_rss_reader.py  test_siliconinvestor.py
(+11 files in other folders)
