[tool.poetry]
name = "stonkfeed"
version = "0.1.0"
description = "A stock investor's news feed par excelance"
authors = ["m1yag1 <8730430+m1yag1@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
bs4 = "^0.0.1"
lxml = "^4.9.4"
jinja2 = "^3.1.2"
boto3 = "^1.34.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
